--- a/package.json
+++ b/package.json
@@ -10,10 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native/new-app-screen": "0.81.1",
+    "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/drawer": "^7.5.7",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "@types/yup": "^0.29.14",
+    "axios": "^1.11.0",
+    "constate": "^3.3.3",
+    "formik": "^2.4.6",
     "react": "19.1.0",
     "react-native": "0.81.1",
-    "@react-native/new-app-screen": "0.81.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-reanimated": "^4.0.3",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.15.4",
+    "react-native-touchable-scale": "^2.2.0",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.4.2",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
